--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,4 +149,19 @@ input[type="enviar"]:hover {
         background-color: #00281f !important;
         color: #019776;
     }
+
+    .cm-service{
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        display: grid;
+        place-items: center;
+    }
+    .cm-service > div {
+        background-color: #f0f0f0;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        padding: 20px;
+        text-align: center;
+    }
    
