--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,7 +85,7 @@
     .cm-service{
         margin: 0;
         padding: 0;
-        height: 100vh;
+        height: 100%;
         display: grid;
         place-items: center;
     }
